feat: added wallet instance attestation (WIA) endpoint
Refs: #706 [SIW-3599]
